--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -88,5 +88,6 @@
 @import 'tpl/bubble';
 @import 'tpl/result';
 @import 'tpl/panel';
+@import 'tpl/panel-close-btn';
 @import 'tpl/popup';
 @import 'tpl/footer';
