--- a/src/pug/tpl/header.pug
+++ b/src/pug/tpl/header.pug
@@ -297,19 +297,19 @@ header.header
               span.header__navbar-icon.pointer-events-none
                 +icon('search')
               span.header__navbar-caption.pointer-events-none Поиск
-            a.header__navbar-item(href="#")
+            .header__navbar-item
               span.header__navbar-icon
                 +icon('compare')
               span.header__navbar-caption Сравнить
-            a.header__navbar-item(href="#")
+            .header__navbar-item
               span.header__navbar-icon
                 +icon('car')
               span.header__navbar-caption Выбор авто
-            a.header__navbar-item(href="#")
+            .header__navbar-item
               span.header__navbar-icon
                 +icon('case')
               span.header__navbar-caption Заказы
-            button.header__navbar-item(data-toggle="modal" data-target="#auth-phone")
+            button.header__navbar-item(data-toggle="modal" data-target="#auth-phone" type="button")
               span.header__navbar-icon
                 +icon('user')
               span.header__navbar-caption Вход | регистрация
