--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -56,6 +56,7 @@
 @import 'tpl/social';
 @import 'tpl/search';
 @import 'tpl/search-panel';
+@import 'tpl/search-dropdown';
 @import 'tpl/swiper';
 @import 'tpl/header';
 @import 'tpl/navbar';
