--- a/src/scss/tpl/_header.scss
+++ b/src/scss/tpl/_header.scss
@@ -1,413 +1,3 @@
-/*
-.header {
-  &.header_sticky {
-    .header__col_search {
-      @include media-breakpoint-down(sm) {
-        @include fw(100%);
-        position: static;
-        padding: 1rem 1rem 0;
-      }
-    }
-
-    .header__col_logo_invisible {
-      @include media-breakpoint-down(sm) {
-        opacity: 0;
-        pointer-events: none;
-      }
-    }
-
-    .header__search-holder {
-      @include media-breakpoint-down(sm) {
-        @include pos(0,0);
-        right: 0;
-      }
-    }
-  }
-}
-
-.header__col {
-  &.header__col_logo {
-    @extend %d-flex-ai-center;
-
-    @include media-breakpoint-up(md) {
-      margin-bottom: 1rem;
-    }
-
-    @include media-breakpoint-down(sm) {
-      margin-bottom: 0.625rem;
-    }
-  }
-
-  &.header__col_search {
-    @include media-breakpoint-up(xl) {
-      @include fw(100%/8*3);
-    }
-
-    @include media-breakpoint-down(lg) {
-      display: none;
-    }
-  }
-
-  &.header__col_nav {
-    @include media-breakpoint-up(xl) {
-      @include fw(100%/8*5);
-    }
-
-    @include media-breakpoint-down(md) {
-      @include fw(100%);
-      justify-content: space-around;
-    }
-  }
-}
-
-.header__nav {
-  &.header__nav_type_panel {
-    @include media-breakpoint-down(sm) {
-      @include fw(100%/6*5);
-    }
-  }
-}
-
-.header__nav-col {
-  position: relative;
-
-  @include media-breakpoint-only(lg) {
-    @include fw(100%/5);
-  }
-
-  @include media-breakpoint-down(sm) {
-    @include fw(100%/5);
-  }
-}
-
-.header__nav-item {
-  @extend %btn-default;
-  transition: all .3s ease;
-
-  &.header__nav-item_type_col {
-    &:hover {
-      .header__nav-icon {
-        background: $color__light;
-      }
-
-      .header__nav-caption {
-        color: $color__brand;
-      }
-    }
-  }
-}
-
-.header__nav-icon {
-  @include wh(24px);
-  padding: .125rem .25rem;
-  align-self: center;
-  border-radius: 50%;
-  color: $color__brand;
-  transition: all .3s ease;
-
-  &.header__nav-icon_feature_bonus {
-    color: $color__success;
-  }
-}
-
-.header__nav-caption {
-  color: $color__link;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  line-height: 1.25rem;
-
-  @include media-breakpoint-up(lg) {
-    display: block;
-  }
-
-  @include media-breakpoint-down(md) {
-    @include h6;
-  }
-
-  @media (max-width:$breakpoint__custom_xs - 1) {
-    display: none;
-  }
-}
-
-.header__btn {
-  &.header__btn_type_cart {
-    @include media-breakpoint-down(md) {
-      @include color($color__brand);
-      flex-direction: column;
-      height: auto;
-      padding: 0;
-      box-shadow: none;
-      background-color: rgba(0,0,0,0);
-    }
-
-    &:hover {
-      .header__icon-holder {
-        @include media-breakpoint-down(md) {
-          background-color: $color__light;
-        }
-      }
-
-      .header__btn-title {
-        @include media-breakpoint-down(md) {
-          @include color($color__brand);
-        }
-      }
-    }
-  }
-
-  &.header__btn_type_cart-holder {
-    @include before;
-    border-radius: .5rem !important;
-
-    &:before {
-      @include wh(100%);
-      @include pos(0,0,fixed);
-      opacity: 0;
-      pointer-events: none;
-      transition: all .3s ease;
-      background-color: rgba(82, 82, 82, .2);
-    }
-  }
-
-  &.header__btn_active {
-    @include media-breakpoint-up(xl) {
-      z-index: 3;
-      position: relative;
-      border-radius: .5rem .5rem 0 0;
-    }
-
-    &:before {
-      opacity: 1;
-      pointer-events: all;
-    }
-
-    .header__btn-title {
-      @media (min-width:$breakpoint__custom_lg) {
-        display: block;
-        margin-left: .5rem;
-      }
-    }
-
-    .header__btn-icon_show {
-      @include media-breakpoint-up(md) {
-        display: none;
-      }
-    }
-
-    .header__btn-icon_close {
-      @include media-breakpoint-up(md) {
-        display: block;
-      }
-    }
-  }
-}
-
-.header__btn-icon {
-  &.header__btn-icon_close {
-    display: none;
-  }
-}
-
-.header__btn-title {
-  display: block;
-  pointer-events: none;
-  margin: 0 0 0 .5rem;
-
-  &.header__btn-title_type_caption {
-    @extend %zi-2;
-    margin-left: 0;
-
-    @include media-breakpoint-up(lg) {
-      @include color(#fff);
-      display: none;
-      text-transform: uppercase;
-    }
-
-    @include media-breakpoint-down(md) {
-      @include h6;
-      @include color($color__text_default);
-      letter-spacing: 0;
-    }
-  }
-
-  @media (max-width:$breakpoint__custom_xs - 1) {
-    display: none;
-  }
-}
-
-.header__icon-holder {
-  pointer-events: none;
-
-  @include media-breakpoint-down(md) {
-    @include wh(24px);
-    padding: .125rem .25rem;
-    border-radius: 50%;
-    color: $color__brand;
-    transition: all .3s ease;
-  }
-}
-
-.header__cart-data {
-  margin: 0 0 0 -.25rem;
-}
-
-.header__counter {
-  min-width: 18px;
-  height: 18px;
-
-  &.header__counter_value_compare {
-    @include media-breakpoint-down(sm) {
-      position: absolute;
-      top: -8px;
-      margin: 0 0 0 22px;
-    }
-  }
-}
-
-.header__search-holder {
-  z-index: 2;
-  justify-content: flex-end;
-
-  @include media-breakpoint-down(sm) {
-    position: relative;
-  }
-
-  .header__col_search {
-    @include pos(2px,0);
-    z-index: 2;
-    width: auto;
-    max-width: initial;
-
-    @include media-breakpoint-up(xl) {
-      right: 60px;
-    }
-
-    @include media-breakpoint-down(lg) {
-      top: 2px;
-      right: 0;
-      display: block;
-    }
-
-    @include media-breakpoint-down(md) {
-      top: -8px;
-    }
-  }
-
-  .header__search-field {
-    padding-right: 5rem;
-  }
-
-  .header__search-btn {
-    &.header__search-btn_close {
-      display: block;
-    }
-  }
-
-  .header__col_nav {
-    @extend %zi-1;
-    justify-content: flex-end;
-
-    @include media-breakpoint-down(lg) {
-      opacity: 0;
-      pointer-events: none;
-    }
-  }
-
-  .header__nav {
-    opacity: 0;
-    pointer-events: none;
-  }
-
-  &.header__search-holder_active {
-    .header__search-dropdown {
-      height: 100%;
-    }
-  }
-}
-
-.header__search {
-  position: relative;
-  overflow: hidden;
-  border-radius: .5rem;
-  background: $color__light;
-}
-
-.header__search-field {
-  @include fw(100%);
-  @include wh(100%,40px);
-  @include fs-lh(1rem,1.375rem);
-  letter-spacing: .05em;
-  padding: .5rem 2.5rem .5rem .875rem;
-  border: 0;
-  background: none;
-  color: $color__brand;
-}
-
-.header__search-btn {
-  @extend %btn-default;
-  @include fw(40px);
-  @include wh(40px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  position: absolute;
-  top: 0;
-  right: 0;
-  color: $color__brand;
-
-  &.header__search-btn_close {
-    right: 40px;
-    display: none;
-  }
-}
-
-.header__search-dropdown {
-  height: 0;
-  max-height: 680px;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  background: $color__light;
-
-  @include media-breakpoint-up(xl) {
-    @include offset(0 -17px 0 0,0 17px 0 0);
-  }
-}
-
-.header__search-section {
-  @include border(1px 0 0,#fff);
-  padding: .5rem 1rem;
-}
-
-.header__search-row {
-  display: flex;
-  align-items: flex-start;
-}
-
-.header__search-picture {
-  @include fw(30px);
-  overflow: hidden;
-  border-radius: .5rem;
-}
-
-.header__panel {
-  @include media-breakpoint-down(md) {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    padding: .7rem 1rem;
-    background-color: #fff;
-    box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, 0.16);
-  }
-
-  @media (max-width:$breakpoint__custom_xs - 1) {
-    padding: 1.125rem 1rem;
-  }
-}
-*/
-
-/*++++++++++++++++++++*/
 @mixin navbar-icon {
   @include h5;
   @include wh(24px);
@@ -426,6 +16,7 @@
 
   @include media-breakpoint-up(lg) {
     @include py(1.25rem,1rem);
+    top: -.5rem;
   }
 
   @include media-breakpoint-only(md) {
@@ -609,7 +200,7 @@
   }
 }
 
-.search-panel-active {
+.search-holder_focused {
   .header__navbar {
     @include media-breakpoint-up(xl) {
       opacity: 0;
