--- a/src/scss/tpl/_search.scss
+++ b/src/scss/tpl/_search.scss
@@ -11,11 +11,19 @@
   @include media-breakpoint-down(lg) {
     @include border(0 0 1px,rgba(0,0,0,0));
   }
+
+  &.search_border_rounded {
+    border-radius: .5rem;
+  }
 }
 
-.search-panel-focus {
+.search-holder_active {
   .search {
     @include media-breakpoint-up(xl) {
+      border-radius: .5rem .5rem 0 0;
+    }
+
+    &.search_border_rounded {
       border-radius: .5rem .5rem 0 0;
     }
   }
@@ -25,14 +33,11 @@
   @include fs-lh(1rem,1.375rem);
   letter-spacing: .05em;
   border: 0;
+  width: 100%;
   flex-grow: 1;
   padding: .5rem .875rem;
   background: none;
   color: $color__text_default;
-
-  @include media-breakpoint-down(lg) {
-    width: 100%;
-  }
 
   &:focus {
     & + .search__btn_type_reset {
@@ -84,7 +89,7 @@
   }
 }
 
-.search-panel-active {
+.search-holder_focused {
   .search {
     @include media-breakpoint-down(lg) {
       border-color: #fff;
